<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/bg"
        android:scaleType="centerCrop"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="100dp"/>

        <com.intrix.social.common.view.STextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="34dp"
            android:paddingRight="34dp"
            android:text="@string/work"
            android:textColor="@android:color/white"
            android:textSize="40sp"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="28dp"/>

        <com.intrix.social.common.view.STextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginRight="70dp"
            android:layout_weight="1"
            android:paddingLeft="34dp"
            android:paddingRight="34dp"
            android:text="@string/ws_info_question"
            android:textColor="@android:color/white"
            android:textSize="28sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!--<com.intrix.social.common.view.STextView-->
                <!--android:id="@+id/skip"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:paddingBottom="16dp"-->
                <!--android:paddingLeft="34dp"-->
                <!--android:paddingRight="34dp"-->
                <!--android:paddingTop="16dp"-->
                <!--android:text="@string/skip"-->
                <!--android:textColor="@android:color/white"-->
                <!--android:textSize="20sp"/>-->

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <com.intrix.social.common.view.STextView
                android:id="@+id/next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:paddingLeft="34dp"
                android:paddingRight="34dp"
                android:paddingTop="16dp"
                android:text="@string/next"
                android:textColor="@android:color/white"
                android:textSize="20sp"/>

        </LinearLayout>
    </LinearLayout>
</FrameLayout>